# FlightClubGameApp

./: CMakeLists.txt  clean.bat  format_all_files.bat  generate_project_file.bat
.github/workflows/: linux-build.yml  windows-build.yml
Automation/: automation.py  build.bat  build_sample_script.py
Source/: .clang-format  main.cpp
Source/Game/: Character.cpp  Character.h  Weapon.cpp  Weapon.h
Source/Tests/: main.cpp
Source/Utils/: Math.cpp  Math.h
